# ML-with-Github-Action

./: .dockerignore  Dockerfile  compose.yaml  pyproject.toml  requirements.txt  requirements_streamlit.txt
.github/workflows/: ml.yml
clean_data/: clean_car_evaluation.csv
mlruns/0/: meta.yaml
mlruns/399107333098422156/: meta.yaml
mlruns/399107333098422156/dc04388ce88946a3845cc4edf5f34b08/: meta.yaml
mlruns/399107333098422156/dc04388ce88946a3845cc4edf5f34b08/metrics/: accuracy
mlruns/399107333098422156/dc04388ce88946a3845cc4edf5f34b08/params/: model
mlruns/399107333098422156/dc04388ce88946a3845cc4edf5f34b08/tags/: mlflow.source.name
mlruns/399107333098422156/dd2c875a57b24ccfb6dbad6ebf660b4b/: meta.yaml
mlruns/399107333098422156/dd2c875a57b24ccfb6dbad6ebf660b4b/metrics/: accuracy
mlruns/399107333098422156/ef4ebe3c4e294a7c8fb784561e954986/: meta.yaml
mlruns/399107333098422156/ef4ebe3c4e294a7c8fb784561e954986/metrics/: accuracy
mlruns/399107333098422156/models/m-274f8dfff3cd422ebde5da0e469ff18a/: meta.yaml
mlruns/399107333098422156/models/m-274f8dfff3cd422ebde5da0e469ff18a/metrics/: accuracy
mlruns/399107333098422156/models/m-9d9feef70be34bf68ebd9508e423d4c8/: meta.yaml
model/nb/: nb_model.pkl  nb_report.txt
model/nb_categorical/: nb_categorical_model.pkl
model/svm/: svm_model.pkl  svm_report.txt
raw_data/: car_evaluation.csv  car_evaluation_fulll.csv
report_site/: Dockerfile  app.py  index.html  nb_report.txt  style.css  svm_report.txt
src/: Dockerfile.preprocessing  Dockerfile.train  app.py  preprocessing.py  train.py  train_mlflow.py
(+11 files in other folders)
