[project]
name = "ml-with-github-action"
version = "0.1.0"
description = ""
authors = [
    {name = "hensomxxxpipel",email = "rachadrisyh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "ml_with_github_action", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
